@@ -14,7 +14,7 @@ Summary: The Red Hat package management system.
 Name: rpm
 %define version @VERSION@
 Version: %{version}
-Release: 0.30
+Release: 0.31
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{version}.tar.gz
 Copyright: GPL
@@ -405,6 +405,10 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Fri Jun  1 2001 Jeff Johnson <jbj@redhat.com>
+- merge sparc64/ia64 fiddles back into linux.{req,prov}.
+- automagically generate perl module dependencies always.
+
 * Thu May 31 2001 Jeff Johnson <jbj@redhat.com>
 - return multiple suggested packages (Pawel Kolodziej <pawelk@pld.org.pl>).
 - fix: return suggested packages when using Depends cache.
