@@ -17,10 +17,23 @@ for f in $scriptlist; do
     esac
 done | sort -u
 
+for f in $filelist; do
+    [ -r $f ] || continue
+    if echo $f | grep -q '\.pm$'
+    then
+        modules="$modules $f"
+    fi
+done
+
+[ -n "$modules" ] && perllist="$perllist $modules"
+
 #
 # Generate perl module dependencies, if any.
 set -x
 [ -x /usr/lib/rpm/perl.req -a -n "$perllist" ] && \
 	echo $perllist | tr [:blank:] \\n | /usr/lib/rpm/perl.req | sort -u
+
+#
+# Then process the files as usual.
 set +x
 echo $filelist | /usr/lib/rpm/find-requires
