@@ -67,7 +67,7 @@ foreach $module (sort keys %require) {
 
     # I am not using rpm3.0 so I do not want spaces arround my
     # operators. Also I will need to change the processing of the
-    # $RPM_* vairable when I upgrade.
+    # $RPM_* variable when I upgrade.
 
     print "perl($module) = $require{$module}\n";
   }
@@ -82,8 +82,7 @@ sub process_file {
   my ($file) = @_;
   chomp $file;
   
-  open(FILE, "<$file")||
-    die("$0: Could not open file: '$file' : $!\n");
+  open(FILE, "<$file") || return;
 
   my ($package, $version) = ();
 
@@ -161,7 +160,7 @@ sub process_file {
 
   }
 
-  close(FILE)||
+  close(FILE) ||
     die("$0: Could not close file: '$file' : $!\n");
 
   return ;
